bzr-20100729
+ tail of dipole potential -> all electrostatic potential-tails (five) implemented

bzr-20100713
+ tail of coloumb-dipole potential
+ full dipole table now initializing 

bzr-20100707
+ third loop in calc_forces_dipole

bzr-20100705
+ splines for tail of coulomb-potential

bzr-20100702
+ monopole enhancement done

bzr-20100630
+ dipole output
+ energy conserving shift for ms-potential
+ new properties static field and short-range dipole moment added to atom_t

trunk-live
+ [APOT] reduce number of sampling points for analytic potentials
+ [APOT] makeapot now writes the correct potential type
+ [APOT] fixed a bug with cp and globals
+ don't write errors if the weight is 0 for energy or stress
+ [APOT] update NOPUNISH target a little bit

trunk-20100623
+ change indent mode a little bit
  this changes many lines, so put it in an extra commit

trunk-20100623
+ Makefile: exit if there is no compiler available
+ [APOT] globals can now also be fixed
+ force data is now separated by 2 blank lines, makes scatterplots for single configs easy

devel-20100610
+ [APOT] make punishments for apot optional
+ there is now (again) a limit on the size of the directional vectors v in simann

trunk-20100609
+ revert simann changes from 201005012
+ update plotapot script for adp potentials
+ update GPL notice
+ add new analytic functions and update old ones

trunk-20100531
+ adapt force routines to new col system

trunk-20100525
+ make scripts executable
+ fix conf_weights for stresses

adp-20100528
+ fix conf_weight for stresses
+ adp is now working with mpi
+ save coloumns for interactions, untested with tabulated potentials for now

adp-20100527
+ adp should now be complete, mpi still missing

bzr-20100512
+ moved files from *_r.* to *.*, all types are real, include header for bracketing
+ fix warnings when compiling with debug flag
+ simann now counts all new parameters as an attempt, even if they were out of bounds
+ optimize evo output