@@ -462,6 +462,7 @@ void read_config(char *filename)
 		atoms[i].neigh[k].r = r;
 		atoms[i].neigh[k].dist = dd;
 #ifdef DIPOLE
+	atoms[i].neigh[k].r2 = r*r;
 	atoms[i].neigh[k].r3 = r*r*r;
 #endif
 #ifdef ADP
