@@ -1,4 +1,7 @@
 bzr-20100729
++ last loop added for dipole calculation
+
+bzr-20100729
 + tail of dipole potential -> all electrostatic potential-tails (five) implemented
 
 bzr-20100713
